--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </nav>
         <div class="banner">
             <div class="banner-content">
-                <h1 class="banner-title">Let's make your home a masterpiece</h1>
+                <h1 class="banner-title">Brand New Group of Architect</h1>
                 <p class="banner-description">There are many ways to make your home a masterpiece. With G3-Architect, we transform your vision into reality, creating spaces that inspire and enhance your daily life.
 
                 </p>
@@ -28,5 +28,69 @@
             <img class="banner-image" src="./images/banner.png" alt="">
         </div>
     </header>
+    <main>
+        <section class="teams display-flex">
+            <div class="team-img-container">
+                <img src="./images/team1.png" alt="two architects discussing a project">
+                <img src="./images/team2.png" alt="two architects discussing a project">
+                <img src="./images/team3.png" alt="two architects discussing a project">
+                <img src="./images/team4.png" alt="two architects discussing a project">
+            </div>
+            <div class="our-features">
+                <h3 class="feature-title"><span id="quick" class="text-light-gray p">Quick list</span> of Our <span id="our-fea">Features</span></h3>
+                <p class="feature-description">
+                    There are many variations of passages of Lorem Ipsum available, 
+                    but the majority have suffered alteration in some form, by injected 
+                    humour, or randomised words which don't look even
+                </p>
+                <button class="btn-primary">Explore Now</button>
+            </div>
+        </section>
+
+        <!-- features you will love & enjoy section -->
+        <!-- <section class="">
+            <h3 class="section-tile"></h3>
+            <p></p>
+        </section> -->
+
+        <!-- many facts -->
+         <section class="facts">
+            <h3 class="text-gray">Some Facts</h3>
+            <p class="text-light-gray">
+                There are many variations of passages of Lorem Ipsum available, but 
+                the majority have suffered alteration.
+            </p>
+            <div class="facts-container">
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="./images/icons/ribon.png" alt="" class="fact-icon">
+                        <h4 class="fact-num">54</h4>
+                        <p class="fact-name">Awards winnings</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="./images/icons/projects.png" alt="" class="fact-icon">
+                        <h4 class="fact-num">1458</h4>
+                        <p class="fact-name">Projects completed</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="./images/icons/customers.png" alt="" class="fact-icon">
+                        <h4 class="fact-num">590</h4>
+                        <p class="fact-name">Clients Worked</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="./images/icons/email.png" alt="" class="fact-icon">
+                        <h4 class="fact-num">22578</h4>
+                        <p class="fact-name">Email send</h5>
+                    </div>
+                </div>
+            </div>
+         </section>
+    </main>
 </body>
 </html>
