\\\\=== all section done with responsive ===////

--- a/index.html
+++ b/index.html
@@ -48,10 +48,50 @@
         </section>
 
         <!-- features you will love & enjoy section -->
-        <!-- <section class="">
-            <h3 class="section-tile"></h3>
-            <p></p>
-        </section> -->
+        <section class="features display-flex">
+            <div class="features-container">
+                <h3 id="feature-title" class="section-tile">Feature you will <br> love & enjoy</h3>
+                <p class="text-light-gray">There are so many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form by injected humor, or randomaised words which don't look even slightly believable.
+                </p>
+            <div class="features-card">
+                <h4 class="features-card-title">Desktop and mobile version</h4>
+                <p class="text-light-gray">
+                    There are so many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form by injected humor, or randomaised words which don't look even slightly believable.
+                </p>
+            </div>
+            <div class="features-card">
+                <h4 class="features-card-title">Desktop and mobile version</h4>
+                <p class="text-light-gray">
+                    There are so many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form by injected humor, or randomaised words which don't look even slightly believable.
+                </p>
+            </div>
+            <div class="features-card">
+                <h4 class="features-card-title">Desktop and mobile version</h4>
+                <p class="text-light-gray">
+                    There are so many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form by injected humor, or randomaised words which don't look even slightly believable.
+                </p>
+            </div>
+            <div class="features-card">
+                <h4 class="features-card-title">Desktop and mobile version</h4>
+                <p class="text-light-gray">
+                    There are so many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form by injected humor, or randomaised words which don't look even slightly believable.
+                </p>
+            </div>
+            </div>
+            <div class="feature-architect">
+                <img src="./images/architect.png" alt="">
+                <button id="experience-badge" class="btn-primary">
+                    <span id="experience-year">10+ Years</span> 
+                    <br>
+                    <span>Experience</span>
+                </button>
+            </div>
+        </section>
 
         <!-- many facts -->
          <section class="facts">
@@ -108,6 +148,11 @@
                 <img src="./images/sponsors/amazon.png" alt="">
                 <img src="./images/sponsors/figma.png" alt="">
             </div>
+        </section>
+
+
+        <section class="footer container">
+            <p class="text-light-gray text-center">All rights reserved copyright 2023 startup landing page design</p>
         </section>
     </main>
 </body>
